--- a/qt/aqt/data/web/pages/BUILD.bazel
+++ b/qt/aqt/data/web/pages/BUILD.bazel
@@ -3,6 +3,7 @@ load("//ts:copy.bzl", "copy_files_into_group")
 _pages = [
     "graphs",
     "congrats",
+    "main-view",
     "deck-options",
     "change-notetype",
     "card-info",
